syntax = "proto3";

package common;


enum ErrCode {
    SUCC = 0;
    SQL = 1001;
    INVALID_TOKEN = 1002;
    FETCH_SERVER  = 1003;
    FB_LOGIN = 1004;
}

message Head {
    int64 uid = 1;
    ErrCode retcode = 2;
    string sid = 3;
    int64 version = 4;
}

message CommRequest {
    Head head = 1;
    int64 seq = 2;
    int64 num = 3;
}

message CommReply {
    Head head = 1;
}
