syntax = "proto3";

import "laughing-server/proto/common/common.proto";

package user;

service User {
    rpc GetInfo(common.CommRequest) returns (InfoReply) {}
    rpc ModInfo(ModInfoRequest) returns (common.CommReply) {}
    rpc FetchInfos(common.CommRequest) returns (FetchInfosReply) {}
    rpc AddInfo(InfoRequest) returns (common.CommReply) {}
}

message Info {
    string headurl = 1;
    string nickname = 2;
    int64 videos = 3;
    int64 followers = 4;
    int64 following = 5;
    int64 hasfollow = 6;
    string ctime = 7;
    string imei = 8;
    int64 id = 9;
    int64 recommend = 10;
}

message InfoRequest {
    common.Head head = 1;
    Info info = 2;
}

message InfoReply {
    common.Head head = 1;
    Info info = 2;
}

message FetchInfosReply {
    common.Head head = 1;
    repeated Info infos = 2;
    int64 total = 3;
}

message ModInfoRequest {
    common.Head head = 1;
    Info info = 2;
}
